# RustEmbeddingServer

./: .env.Sample  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Docs/: ApiDocument.md
src/: backend.rs  config.rs  error.rs  frontend.rs  lib.rs  main.rs  metrics.rs  models.rs  registry.rs  routes.rs
src/frontend/: app.js  assets.rs  index.html  page.rs  style.css
tests/: integration.rs  model_metadata.rs
